# JAQ

./: .gitignore  AppContext_8cpp_source.html  AppContext_8h_source.html  AppUtils_8qml_source.html  AsideBar_8qml_source.html  CMakeLists.txt  CityInfo_8qml_source.html  CitySelection_8qml_source.html  DatePicker_8qml_source.html  DividerHorizontal_8qml_source.html  Doxyfile  GeoLocator_8cpp_source.html  GeoLocator_8h_source.html  Main.qml  MainSection_8qml_source.html  Main_8qml_source.html  MapView_8qml_source.html  NetworkChecker_8cpp_source.html  NetworkChecker_8h_source.html  NetworkWorker_8cpp_source.html  NetworkWorker_8h_source.html  PathManager_8cpp_source.html  PathManager_8h_source.html  README.md  SearchCity.qml  SearchCity_8qml_source.html  SensorDataChart_8qml_source.html  SensorDataHandler_8cpp_source.html  SensorDataHandler_8h_source.html  SensorDataModel_8cpp_source.html  SensorDataModel_8h_source.html  SensorDataTableView_8qml_source.html  SensorDataTable_8qml_source.html  SensorInfo_8qml_source.html  SensorSelectList_8qml_source.html  StationCoordinateModel_8cpp_source.html  StationCoordinateModel_8h_source.html  StationInfo_8qml_source.html  StationSelectList_8qml_source.html  TopBar_8qml_source.html  (+190 more)
.github/workflows/: doxygen-documentation.yaml
City/: city.cpp  city.h  cityhandler.cpp  cityhandler.h  cityindexmodel.h
Components/: AppUtils.qml  AsideBar.qml  CityInfo.qml  CitySelection.qml  DatePicker.qml  DividerHorizontal.qml  MainSection.qml  MapView.qml  SearchCity.qml  SensorDataChart.qml  SensorDataTable.qml  SensorDataTableView.qml  SensorInfo.qml  SensorSelectList.qml  StationInfo.qml  StationSelectList.qml  TopBar.qml
Entities/: city.cpp  city.h  sensor.cpp  sensor.h  station.cpp  station.h
Handlers/: SensorDataHandler.cpp  SensorDataHandler.h  cityhandler.cpp  cityhandler.h  sensorhandler.cpp  sensorhandler.h  stationhandler.cpp  stationhandler.h
Models/: SensorDataModel.cpp  SensorDataModel.h  StationCoordinateModel.cpp  StationCoordinateModel.h  cityindexmodel.cpp  cityindexmodel.h  citysortproxymodel.cpp  citysortproxymodel.h  sensormodel.cpp  sensormodel.h  stationmodel.cpp  stationmodel.h
Sensor/: sensor.cpp  sensor.h  sensorhandler.cpp  sensorhandler.h  sensormodel.cpp  sensormodel.h
Station/: station.cpp  station.h  stationhandler.cpp  stationhandler.h  stationmodel.cpp  stationmodel.h
Tests/: CMakeLists.txt  test.cpp  tst_test.cpp
core/: AppContext.cpp  AppContext.h  GeoLocator.cpp  GeoLocator.h  NetworkChecker.cpp  NetworkChecker.h  NetworkWorker.cpp  NetworkWorker.h  PathManager.cpp  PathManager.h  apiclient.cpp  apiclient.h  database.cpp  database.h
core/Database/: database.cpp  database.h  databasereader.cpp  databasereader.h  databasewriter.cpp  databasewriter.h
docs/: main.dox
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+112 more)
